--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "frenchDip",
     "frenchDipjs"
   ],
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
+    "compass": "^0.1.1",
     "grunt": "~0.4.1",
     "grunt-assemble": "^0.3.1",
     "grunt-autoprefixer": "^3.0.0",
