--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "Deli Line",
   "version": "0.0.1",
   "dependencies": {
-    "jquery": "latest",
-    "jquery.easing": "~1.3.1",
-    "modernizr": "~2.8.3",
-    "normalize-css": "~3.0.2",
+    "bootstrap": "~3.3.5",
+    "bootstrap-sass": "~3.3.5",
     "eventEmitter": "~4.2.11",
     "eventie": "~1.0.6",
     "foundation": "~5.5.3",
     "hammerjs": "~2.0.4",
     "imagesloaded": "~3.1.8",
     "jqBootstrapValidation": "~1.3.7",
+    "jquery": "latest",
+    "jquery.easing": "~1.3.1",
     "lodash": "~3.5.0",
+    "modernizr": "~2.8.3",
+    "normalize-css": "~3.0.2",
     "slick": "*",
-    "verge": "ryanve/verge#~1.9.1",
-    "bootstrap": "~3.3.5",
-    "bootstrap-sass": "~3.3.5"
+    "verge": "ryanve/verge#~1.9.1"
   },
   "author": {
     "name": "Noah Rodenbeek",
